# TRABALHO-PRATICO

./: CMakeLists.txt  README.md  questão 4.xlsx
src/: main.c
